// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle editing: edit form 1`] = `
<EditForm
  application={
    Object {
      "branches": Array [
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
        },
      ],
      "key": "foo",
      "name": "Foo",
      "projects": Array [
        Object {
          "branch": "master",
          "isMain": true,
          "key": "bar",
          "name": "Bar",
        },
      ],
      "visibility": "private",
    }
  }
  header="portfolios.edit_application"
  onClose={[Function]}
  onEdit={[MockFunction]}
/>
`;

exports[`should render correctly: can recompute 1`] = `
<div
  className="page page-limited"
>
  <div
    className="boxed-group"
    id="view-details"
  >
    <div
      className="boxed-group-actions"
    >
      <Button
        className="little-spacer-right"
        id="view-details-edit"
        onClick={[Function]}
      >
        edit
      </Button>
      <Button
        className="little-spacer-right"
        onClick={[MockFunction]}
      >
        application_console.recompute
      </Button>
    </div>
    <header
      className="boxed-group-header"
      id="view-details-header"
    >
      <h2
        className="text-limited"
        title="Foo"
      >
        Foo
      </h2>
    </header>
    <div
      className="boxed-group-inner"
      id="view-details-content"
    >
      <div
        className="big-spacer-bottom"
      >
        <div
          className="little-spacer-bottom"
        >
          Foo bar
        </div>
        <div
          className="subtitle"
        >
          key
          : 
          foo
        </div>
      </div>
      <ApplicationProjects
        application={
          Object {
            "branches": Array [
              Object {
                "analysisDate": "2018-01-01",
                "excludedFromPurge": true,
                "isMain": false,
                "name": "branch-6.7",
              },
            ],
            "description": "Foo bar",
            "key": "foo",
            "name": "Foo",
            "projects": Array [
              Object {
                "branch": "master",
                "isMain": true,
                "key": "bar",
                "name": "Bar",
              },
            ],
            "visibility": "private",
          }
        }
        onAddProject={[MockFunction]}
        onRemoveProject={[MockFunction]}
      />
      <ApplicationBranches
        application={
          Object {
            "branches": Array [
              Object {
                "analysisDate": "2018-01-01",
                "excludedFromPurge": true,
                "isMain": false,
                "name": "branch-6.7",
              },
            ],
            "description": "Foo bar",
            "key": "foo",
            "name": "Foo",
            "projects": Array [
              Object {
                "branch": "master",
                "isMain": true,
                "key": "bar",
                "name": "Bar",
              },
            ],
            "visibility": "private",
          }
        }
        onUpdateBranches={[MockFunction]}
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="page page-limited"
>
  <div
    className="boxed-group"
    id="view-details"
  >
    <div
      className="boxed-group-actions"
    >
      <Button
        className="little-spacer-right"
        id="view-details-edit"
        onClick={[Function]}
      >
        edit
      </Button>
      <Button
        className="little-spacer-right"
        onClick={[MockFunction]}
      >
        application_console.recompute
      </Button>
    </div>
    <header
      className="boxed-group-header"
      id="view-details-header"
    >
      <h2
        className="text-limited"
        title="Foo"
      >
        Foo
      </h2>
    </header>
    <div
      className="boxed-group-inner"
      id="view-details-content"
    >
      <div
        className="big-spacer-bottom"
      >
        <div
          className="subtitle"
        >
          key
          : 
          foo
        </div>
      </div>
      <ApplicationProjects
        application={
          Object {
            "branches": Array [
              Object {
                "analysisDate": "2018-01-01",
                "excludedFromPurge": true,
                "isMain": false,
                "name": "branch-6.7",
              },
            ],
            "key": "foo",
            "name": "Foo",
            "projects": Array [
              Object {
                "branch": "master",
                "isMain": true,
                "key": "bar",
                "name": "Bar",
              },
            ],
            "visibility": "private",
          }
        }
        onAddProject={[MockFunction]}
        onRemoveProject={[MockFunction]}
      />
      <ApplicationBranches
        application={
          Object {
            "branches": Array [
              Object {
                "analysisDate": "2018-01-01",
                "excludedFromPurge": true,
                "isMain": false,
                "name": "branch-6.7",
              },
            ],
            "key": "foo",
            "name": "Foo",
            "projects": Array [
              Object {
                "branch": "master",
                "isMain": true,
                "key": "bar",
                "name": "Bar",
              },
            ],
            "visibility": "private",
          }
        }
        onUpdateBranches={[MockFunction]}
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: is loading 1`] = `
<i
  className="spinner spacer"
/>
`;
